5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4486/executions/1590_2895.log
== TEST (2019-03-29 20:04:14) 
-- CODE:
q = int(input("Digite a quantidade de jogos encomendado:"))
v = float(input("Digite o valor jogo:"))
f = float(input("Digite o valor do frete:"))
int Preçototal
Preçototal = q*v + f
print(Preçototal)
-- ERROR:
File "XXXX", line 4
    int Preçototal
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:04:27) 
-- CODE:
q = int(input("Digite a quantidade de jogos encomendado:"))
v = float(input("Digite o valor jogo:"))
f = float(input("Digite o valor do frete:"))
Preçototal = q*v + f
print(Preçototal)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 20:07:56) 
-- CODE:
q = int(input("Digite a quantidade de jogos encomendado:"))
v = float(input("Digite o valor jogo:"))
f = float(input("Digite o valor do frete:"))
Preçototal = q*v + f
print(Preçototal)
-- EXECUTION TIME:
0.137722
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
